<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/men_s_wear" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/women">
        </item>
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/accesories" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/track_order" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/account_details" />
        <item
            android:id="@+id/nav_send"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_log"
            android:title="@string/sign_out" />
    </group>

</menu>
